test/files/neg/bug846.check
bug846.scala:9: error: type mismatch;
 found   : null.type (with underlying type Null)
 required: B
    if (a != null) f(a) else null
                             ^
one error found
